--- a/base.css
+++ b/base.css
@@ -147,3 +147,43 @@ body {
     position: relative;
     top: 5px;
 }
+
+/* ----------------------- Transition Slide ----------------------- */
+
+.showcase {
+    z-index: 4;
+}
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .8;
+    z-index: 2;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--secondaryText);
+    mix-blend-mode: overlay;
+}
+
+.logo {
+    position: relative;
+    z-index: 10;
+    top: 250px;
+    left: 38%;
+    opacity: 1;
+}
+
+.logo img {
+    width: 400px;
+    height: 400px;
+}
