Second Slide CSS
Second slide CSS added.
Opacity and transform base active classes add to CSS file.
Transition slide CSS replaced to the top.

--- a/base.css
+++ b/base.css
@@ -28,6 +28,46 @@ body {
     background-image: url(./img/old-black-background-grunge-texture-dark-wallpaper-blackboard-chalkboard-room-wall.jpg);
 }
 
+/* ----------------------- Transition Slide ----------------------- */
+
+.showcase {
+    z-index: 4;
+}
+
+.video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: .8;
+    z-index: 2;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: var(--secondaryText);
+    mix-blend-mode: overlay;
+}
+
+.logo {
+    position: relative;
+    z-index: 10;
+    top: 250px;
+    left: 38%;
+    opacity: 1;
+}
+
+.logo img {
+    width: 400px;
+    height: 400px;
+}
+
 /* ----------------------- First Slide ----------------------- */
 
 .container {
@@ -171,47 +211,112 @@ body {
     transition: all .6s ease-in-out;
 }
 
-/* ----------------------- Transition Slide ----------------------- */
+/* ----------------------- Second Slide ----------------------- */
 
-.showcase {
-    z-index: 4;
+.container2 {
+    display: flex;
 }
 
-.video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    opacity: .8;
-    z-index: 2;
+.sepContain1 {
+    flex: 1;
+    display: grid;
+    grid-template-areas:
+        "sepHeader"
+        "sepMain"
+        "sepFooter";
+    box-shadow: 2px 0px #888888;
+    border-right: 1px solid var(--secondaryText);
+    opacity: 0;
+    transform: translateX(-100%);
+    transition: all .7s ease-in-out;
 }
 
-.overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: var(--secondaryText);
-    mix-blend-mode: overlay;
+.sepContain2 {
+    flex: 1;
+    display: grid;
+    grid-template-areas:
+        "sepHeader"
+        "sepMain"
+        "sepFooter";
+    box-shadow: 2px 0px #888888;
+    border-right: 1px solid var(--secondaryText);
+    opacity: 0;
+    transform: translateX(-140%);
+    transition: all .8s ease-in-out;
 }
 
-.logo {
-    position: relative;
-    z-index: 10;
-    top: 250px;
-    left: 38%;
+.sepContain3 {
+    flex: 1;
+    display: grid;
+    grid-template-areas:
+        "sepHeader"
+        "sepMain"
+        "sepFooter";
+    box-shadow: 2px 0px #888888;
+    border-right: 1px solid var(--secondaryText);
+    opacity: 0;
+    transform: translateX(-180%);
+    transition: all .9s ease-in-out;
+}
+
+.sepContain1-active {
     opacity: 1;
+    transform: translateX(0);
+    transition: all .7s ease-in-out;
 }
 
-.logo img {
-    width: 400px;
-    height: 400px;
+.sepContain2-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all .8s ease-in-out;
 }
 
+.sepContain3-active {
+    opacity: 1;
+    transform: translateX(0);
+    transition: all .9s ease-in-out;
+}
 
+.sepHeader {
+    justify-content: center;
+    grid-area: sepHeader;
+    height: 300px;
+}
+
+.title2 {
+    text-align: center;
+    padding-top: 50px;
+    font-size: 1.5rem;
+}
+
+.title-contents {
+    text-align: center;
+    padding-top: 50px;
+    font-size: 2rem;
+}
+
+.sepMain {
+    grid-area: sepMain;
+    height: 500px;
+}
+
+.sepImg {
+    display: block;
+    margin: auto;
+    max-width: 500px;
+}
+
+.sepFooter {
+    grid-area: sepFooter;
+    background-color: var(--primaryBackground);
+    height: 250px;
+}
+
+.price2 {
+    text-align: center;
+    color: black;
+    font-size: 100px;
+}
 
 /* ----------------------- Animate ----------------------- */
 
