Transition Slide CSS Update
fadeIn kayframes added.
opacity values ​​has been changed.
transitionAdd function formatted to async function.

--- a/base.css
+++ b/base.css
@@ -53,6 +53,7 @@ body {
     height: 100%;
     background: var(--secondaryText);
     mix-blend-mode: overlay;
+    opacity: 0;
 }
 
 .logo {
@@ -60,10 +61,7 @@ body {
     z-index: 10;
     top: 250px;
     left: 38%;
-    opacity: 1;
-}
-
-.logo img {
+    opacity: 0;
     width: 400px;
     height: 400px;
 }
@@ -323,6 +321,12 @@ body {
 
 .fade-out {
     animation: fade 1s;
+    opacity: 0;
+}
+
+.fade-in {
+    animation: fadeIn 1s ease-in;
+    opacity: 1;
 }
 
 @keyframes fade {
@@ -332,5 +336,35 @@ body {
 
     to {
         opacity: 0
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
